@@ -1,4 +1,8 @@
   20 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  affine-1.2.0.ebuild:
+  dev-python/affine: enable test suite
+
+  20 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
   affine-1.2.0.ebuild, metadata.xml:
   dev-python/affine: enable python3.6 support
 
